UI: File Browser Preview Image not responsive to click #89449

Closed
opened 2021-06-26 12:41:30 +02:00 by Wykrhm Reddy · 18 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-25 20:57, hash: 5759bbe9f9
Worked: Last build
Caused by ae085e301c

Short description of error
The graphic element of file browser items is no longer responsive to clicks. For example: the image part of the thumbnail, the graphic part of the folder / file icon and etc.

Clicking the container works still - i.e clicking the name or the empty padding space around the image / thumbnail but the graphic element itself is unresponsive.

Exact steps for others to reproduce the error

  • Open file browser.
  • Try to click on an image preview / icon
  • won't work.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-25 20:57, hash: `5759bbe9f9` Worked: Last build Caused by ae085e301c **Short description of error** The graphic element of file browser items is no longer responsive to clicks. For example: the image part of the thumbnail, the graphic part of the folder / file icon and etc. Clicking the container works still - i.e clicking the name or the empty padding space around the image / thumbnail but the graphic element itself is unresponsive. **Exact steps for others to reproduce the error** - Open file browser. - Try to click on an image preview / icon - won't work.
Author

Added subscriber: @Wyk

Added subscriber: @Wyk

#89533 was marked as duplicate of this issue

#89533 was marked as duplicate of this issue

#89498 was marked as duplicate of this issue

#89498 was marked as duplicate of this issue

#89480 was marked as duplicate of this issue

#89480 was marked as duplicate of this issue
Author

Added subscriber: @Harley

Added subscriber: @Harley
Author

@Harley Tagging you. Maybe it's a side effect of this update? https://developer.blender.org/rBcb548329eaea765c3d1c0e80576ec080e922fef6

@Harley Tagging you. Maybe it's a side effect of this update? https://developer.blender.org/rBcb548329eaea765c3d1c0e80576ec080e922fef6
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Harley Acheson self-assigned this 2021-06-26 15:39:35 +02:00
Member

Wow, will take a look

Wow, will take a look
Harley Acheson removed their assignment 2021-06-26 20:12:25 +02:00
Member

Added subscriber: @FabianSchempp

Added subscriber: @FabianSchempp
Member

No, not mine. This error appears to be introduced in https://developer.blender.org/rBae085e301c2aac0d6956609bfe93a90a19f0e235 by @fabian_schempp.

No, not mine. This error appears to be introduced in https://developer.blender.org/rBae085e301c2aac0d6956609bfe93a90a19f0e235 by @fabian_schempp.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Recent regression so marking this as High priority issue.

@Harley , thanks for finding the exact culprit :)

Recent regression so marking this as High priority issue. @Harley , thanks for finding the exact culprit :)

Added subscriber: @Memento

Added subscriber: @Memento
Member

Added subscriber: @mofoni

Added subscriber: @mofoni
Member

Added subscribers: @kuzey, @lichtwerk, @adrien.gomez

Added subscribers: @kuzey, @lichtwerk, @adrien.gomez

This issue was referenced by afb17552e1

This issue was referenced by afb17552e19c56daab6928ed1e2514b962770e19
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2021-06-28 18:43:22 +02:00
Member

Added subscriber: @BlenderSushiGuy

Added subscriber: @BlenderSushiGuy
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#89449
No description provided.