Fix T89449: File Browser preview image not responsive to click

Logic in the main `switch` for button handling was wrong and would execute for
other button types than the new data-set row button type.